; ModuleID = '/home/carl/AnghaBench/kphp-kdb/text/extr_text-engine.c_getArg.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/text/extr_text-engine.c_getArg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@qGet = common dso_local global i32 0, align 4
@qGetLen = common dso_local global i32 0, align 4
@qPost = common dso_local global i32 0, align 4
@qPostLen = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @getArg(i8* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = load i32, i32* @qGet, align 4
  %12 = load i32, i32* @qGetLen, align 4
  %13 = call i32 @getArgFrom(i8* %8, i32 %9, i8* %10, i32 %11, i32 %12)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %23

16:                                               ; preds = %3
  %17 = load i8*, i8** %4, align 8
  %18 = load i32, i32* %5, align 4
  %19 = load i8*, i8** %6, align 8
  %20 = load i32, i32* @qPost, align 4
  %21 = load i32, i32* @qPostLen, align 4
  %22 = call i32 @getArgFrom(i8* %17, i32 %18, i8* %19, i32 %20, i32 %21)
  store i32 %22, i32* %7, align 4
  br label %23

23:                                               ; preds = %16, %3
  %24 = load i32, i32* %7, align 4
  ret i32 %24
}

declare dso_local i32 @getArgFrom(i8*, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
